Sec comment count to hard coded value for testing purpose (1).